--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,9 @@
   
   footer {
     display: flex;
+    align-items: center;
     text-align: center;
+    justify-content: space-between;
     background-color: #F3C5C5 ;
     height: 50px;
     margin: 30px;
